# jmp

./: Cargo.toml  README.md  jmp.toml
src/: conf.rs  jumps.rs  main.rs
src/bangs/: bangs.rs  duckduckgo.json  mod.rs
