[package]
name = "jmp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8"
tower-http = { version = "0.6.4", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
